--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,11 @@ dev = [
     "pytest-asyncio>=0.23",
     "ruff>=0.8.0",
 ]
+bench = [
+    "pytest-benchmark>=4.0",
+    "numpy>=1.24",
+    "matplotlib>=3.7",
+]
 
 [build-system]
 requires = ["hatchling"]
