--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ packages = ["src/bloblog"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
+python_files = ["test_*.py", "*_test.py", "bench_*.py"]
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "function"
 
