--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,11 @@ description = "A blob logging and pub/sub node framework"
 requires-python = ">=3.12"
 dependencies = []
 
+[project.optional-dependencies]
+numpy = ["numpy>=1.24"]
+pandas = ["numpy>=1.24", "pandas>=2.0"]
+geopandas = ["numpy>=1.24", "pandas>=2.0", "geopandas>=0.14", "pyarrow>=14.0"]
+
 [dependency-groups]
 dev = [
     "pytest>=8.0",
